content & image changes

--- a/src/app/components/enquiry-footer/enquiry-footer.component.html
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-sm-3"><img src="/assets/images/about-us/Group 2708.png"> <span class="contacts"><a href="tel:+91 9940410072">+91 9940410072</a></span></div>
             <div class="col-sm-3"><img src="/assets/images/about-us/Group 2709.png"> <span class="contacts"><a href="mailto:enquire@uxmint.in">enquire@uxmint.in</a></span></div>
-            <div class="col-sm-3"><img src="/assets/images/about-us/Group 3363.png"> <span class="contacts">Locate us</span></div>
+            <div class="col-sm-3"><img src="/assets/images/about-us/Group 3363.png"> <span class="contacts"><a href="https://www.google.com/maps/place/UXMINT/@12.9676175,80.2130584,14.9z/data=!4m5!3m4!1s0x3a525c31fbc1e857:0xd520a88b9abf07ec!8m2!3d12.9703721!4d80.2175152">Locate us</a></span></div>
             <div class="col-sm-1"></div>
            </div>
           </div>
