--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -63,6 +63,7 @@
           <li><img src="/assets/images/projects/health/research.png" /></li>
           <li><img src="/assets/images/projects/health/user.png" /></li>
           <li><img src="/assets/images/projects/health/design.png" /></li>
+          <li><img src="/assets/images/projects/health/test.png" /></li>
           <li><img src="/assets/images/projects/health/refine.png" /></li>
         </ul>
       </div>
@@ -102,7 +103,8 @@
           <div class="col-md-8">
             <h3>User Research</h3>
             <p>Five distinct user groups was formed through our user research</p>
-            <img src="/assets/images/projects/health/survey.png" />
+            <p>- surveys</p>
+            <p>- User Interviews</p>
             <div class="row user-list">
               <div class="col-md-4">
                 <img src="/assets/images/projects/health/home-maker.png" /><span class="highlights1">Home Maker</span>
@@ -110,7 +112,7 @@
             </div>
               <div class="col-md-4">
                 <img src="/assets/images/projects/health/env-friendly.png" /><span class="highlights1">Environment Friendy</span>
-                <img src="/assets/images/projects/health/inorg-user.png" /><span class="highlights1">InOrganic User</span>
+                <img src="/assets/images/projects/health/inorg-user.png" /><span class="highlights1">Inorganic User</span>
             </div>
               <div class="col-md-4">
                 <img src="/assets/images/projects/health/member.png" /><span class="highlights1">Existing User</span>
