--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -248,7 +248,7 @@
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-3">
-                <h4>Info. Arch.</h4>
+                <h4>Information Architecture</h4>
                 <p>Closed Card Sorting was performed for the
                   list of task and Information Architecture
                   was defined</p>
