--- a/src/app/components/projects/skill-development/skill-development.component.html
+++ b/src/app/components/projects/skill-development/skill-development.component.html
@@ -272,7 +272,7 @@
 <!-- App -->
 <section class="app">
   <div class="container">
-    <h1>App</h1>
+    <h1>App View</h1>
     <div class="app-image step-image">
       <img src="/assets/images/projects/skill-development/image1.png" />
     </div>
