--- a/src/app/components/projects/construction-portal/construction-portal.component.html
+++ b/src/app/components/projects/construction-portal/construction-portal.component.html
@@ -109,13 +109,43 @@
   <!-- How we solved -->
 
   <!-- Web image -->
-<section class="web-image">
+<!-- <section class="web-image">
   <div class="container">
     <div class="web">
        <img src="/assets/images/projects/web-development/web-dev.png" alt="UX consulting"/>
     </div>
   </div>
-</section>
+</section> -->
+<section class="web-view">
+  <div class="container">
+      <div class="heading">
+      <h1>Web View</h1>
+      <img src="/assets/images/projects/web-development/web-dev.png">
+  </div>
+  <div class="row">
+      <div class="col-md-3">
+          <div class="step-image">
+              <img src="/assets/images/projects/construction/view1.png" />
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="step-image">
+              <img src="/assets/images/projects/construction/view2.png" />
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="step-image">
+              <img src="/assets/images/projects/construction/view3.png" />
+            </div>
+          </div>
+          <div class="col-md-3">
+              <div class="step-image">
+                  <img src="/assets/images/projects/construction/view4.png" />
+              </div>
+          </div>
+      </div>
+      </div>
+  </section>
 <!-- Web image -->
 
 <!-- Solution -->
