--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -23,7 +23,7 @@
       <div class="col-md-1"></div>
       <div class="col-md-7">
         <div class="step-image">
-        <img src="/assets/images/projects/web-development/web-dev.png" alt="UX consulting"/>
+        <img src="/assets/images/projects/web-development/web.png" alt="UX consulting"/>
       </div>
     </div>
     </div>
@@ -123,13 +123,43 @@
 <!-- What we done -->
 
 <!-- Web image -->
-<section class="web-image">
+<!-- <section class="web-image">
   <div class="container">
     <div class="image">
        <img src="/assets/images/projects/web-development/web-dev.png" alt="UX consulting"/>
     </div>
   </div>
-</section>
+</section> -->
+<section class="web-view">
+  <div class="container">
+      <div class="heading">
+      <h1>Web View</h1>
+      <img src="/assets/images/projects/web-development/web-dev.png">
+  </div>
+  <div class="row">
+      <div class="col-md-3">
+          <div class="step-image">
+              <img src="/assets/images/projects/construction/view1.png" />
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="step-image">
+              <img src="/assets/images/projects/construction/view2.png" />
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="step-image">
+              <img src="/assets/images/projects/construction/view3.png" />
+            </div>
+          </div>
+          <div class="col-md-3">
+              <div class="step-image">
+                  <img src="/assets/images/projects/construction/view4.png" />
+              </div>
+          </div>
+      </div>
+      </div>
+  </section>
 <!-- Web image -->
 
 
