content & image changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -108,7 +108,7 @@
             </div>
       </div>
           <div class="col-md-4 redirect">
-            <a href="https://uxmint.in/">
+            <a href="https://uxmint.in/" target="_blank">
               <div class="service">
                 <div class="service-icon">
                   <img src="/assets/images/services/Group 2770.png" alt="Training"/>
@@ -177,30 +177,30 @@
     <div class="our-client-body">
         <div class="row">
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo010.jpg" alt="">
+                  <img src="/assets/images/our-clients/logo010.png" alt="">
             </div>
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo020.jpg" alt="">
+                  <img src="/assets/images/our-clients/logo020.png" alt="">
             </div>
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo030.jpg" alt="">
+                  <img src="/assets/images/our-clients/logo030.png" alt="">
             </div>
             <div class="col-sm-3 client">
-                <img src="/assets/images/our-clients/logo040.jpg" alt="">
+                <img src="/assets/images/our-clients/logo040.png" alt="">
           </div>
           </div>
           <div class="row">
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo050.jpg" alt="">
+                  <img src="/assets/images/our-clients/logo050.png" alt="">
             </div>
             <div class="col-sm-3 client1">
-                  <img src="/assets/images/our-clients/logo060.jpg" alt="">
+                  <img src="/assets/images/our-clients/logo060.png" alt="">
             </div>
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo070.jpg" alt="">
+                  <img src="/assets/images/our-clients/logo070.png" alt="">
             </div>
             <div class="col-sm-3 client">
-                <img src="/assets/images/our-clients/logo080.jpg" alt="">
+                <img src="/assets/images/our-clients/logo080.png" alt="">
           </div>
           </div>
     </div>
