--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -16,7 +16,7 @@
                     <div class="post-detail">
                         <h3>{{post.title}}</h3>
                         <p>{{post.description}}</p>
-                        <a class="btn" [href]="post.url">Read More</a>
+                        <a class="btn" [href]="post.url" target="_blank">Read More</a>
                     </div>
                 </div>
               </div>
