content & image changes

--- a/src/app/components/projects/car-usability-testing/car-usability-testing.component.html
+++ b/src/app/components/projects/car-usability-testing/car-usability-testing.component.html
@@ -41,8 +41,8 @@
         <h3>Goal</h3>
           <p>Primary objective of this usability testing of prototype system was to observe the Behaviour under different 
             conditions in target user segments; with the parameters of Cognition, Acceptance and Reach. 
-            How Culture & Environment impacts the understanding of the functionalities? <br>
-            Understanding the preference of end-users for "Alert System" in terms of "Visual", "Audio" and "Haptics".
+            How Culture & Environment impacts the understanding of the functionalities? </p>
+          <p>Understanding the preference of end-users for "Alert System" in terms of "Visual", "Audio" and "Haptics".
           </p>
       </div>
     </div>
