--- a/src/app/components/projects/child-care/child-care.component.scss
+++ b/src/app/components/projects/child-care/child-care.component.scss
@@ -122,7 +122,7 @@
     }
     .image2{
         img{
-            width: 400px;
+            width: 100%;
             height: auto;
             transition-property: width, height;
             transition-duration: 1s;
