--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -105,16 +105,20 @@
             <p>Five distinct user groups was formed through our user research</p>
             <p>- surveys</p>
             <p>- User Interviews</p>
-            <div class="row user-list">
-              <div class="col-md-4">
+            <div class="user-list">
+              <div class="row">
                 <img src="/assets/images/projects/health/home-maker.png" /><span class="highlights1">Home Maker</span>
+              </div>
+              <div class="row">
                 <img src="/assets/images/projects/health/org-user.png" /><span class="highlights1">Organic User</span>
             </div>
-              <div class="col-md-4">
+              <div class="row">
                 <img src="/assets/images/projects/health/env-friendly.png" /><span class="highlights1">Environment Friendy</span>
+              </div>
+              <div class="row">
                 <img src="/assets/images/projects/health/inorg-user.png" /><span class="highlights1">Inorganic User</span>
             </div>
-              <div class="col-md-4">
+              <div class="row">
                 <img src="/assets/images/projects/health/member.png" /><span class="highlights1">Existing User</span>
             </div>
             </div>
