--- a/src/app/components/projects/skill-development/skill-development.component.scss
+++ b/src/app/components/projects/skill-development/skill-development.component.scss
@@ -296,7 +296,8 @@
             }
             p{
                 font-size: 13px;
-                line-height: 25px;
+                line-height: 20px;
+                margin-bottom: 30px;
             }
             .box {
                 display: flex;
@@ -315,7 +316,7 @@
             .step-image1{
                 margin-top: 0;
                 margin-bottom: 0;
-                margin-left: 40px;
+                margin-left: 0px;
             }
             .set-list{
             .highlights{
@@ -358,6 +359,7 @@
         h3{
             font-size: 20px;
             padding-top: 20px;
+            padding-bottom: 10px;
         }
         p{
             font-size: 13px;
@@ -413,7 +415,8 @@
         }
         h3{
             font-size: 20px;
-            padding-bottom: 10px;
+            padding-bottom: 0px;
+            padding-top: 20px;
         }
         p{
             font-size: 13px;
