--- a/src/app/components/projects/car-usability-testing/car-usability-testing.component.scss
+++ b/src/app/components/projects/car-usability-testing/car-usability-testing.component.scss
@@ -68,6 +68,7 @@
         h3{
             font-size: 20px;
             padding-bottom: 10px;
+            padding-top: 10px;
         }
         p{
             font-size: 13px;
@@ -119,11 +120,12 @@
     }
     h3{
         font-size: 20px;
-        padding-bottom: 10px;
+        padding-bottom: 0px;
     }
     p{
         font-size: 13px;
         line-height: 25px;
+        padding-bottom: 10px;
     }
     .types{
         p{
