--- a/src/app/components/projects/event-management/event-management.component.scss
+++ b/src/app/components/projects/event-management/event-management.component.scss
@@ -296,6 +296,7 @@ p{
     p{
         font-size: 13px;
         line-height: 25px;
+        margin-bottom: 30px;
     }
         .vertical1, .vertical2{ 
             display: none;
@@ -365,7 +366,7 @@ p{
         padding-bottom: 60px;
         h2{
             font-size: 20px;
-            padding-top: 20px;
+            padding-top: 30px;
             padding-bottom: 10px;
         }
         p{
@@ -426,6 +427,7 @@ p{
         }
         p{
             font-size: 13px;
+            margin-bottom: 30px;
         }
     }
 }
