--- a/src/app/components/projects/networking/networking.component.scss
+++ b/src/app/components/projects/networking/networking.component.scss
@@ -115,7 +115,7 @@
     }
     p{
         font-size: 13px;
-        margin-top: 0px;
+        margin-top: 20px;
         line-height: 25px;
         padding-right: 0px;
     }
@@ -220,6 +220,7 @@
     .research {
         .list-icons{
             padding-top: 20px;
+            padding-left: 0;
             list-style: none;
             li{
                 padding-right: 20px;
@@ -253,6 +254,9 @@
         }
         p{
             font-size: 13px;
+            margin-bottom: 30px;
+            line-height: 20px;
+            color: #CBCBCB;
         }
 }
 }
@@ -546,8 +550,8 @@
         margin-top: 30px;
     }
     h5{
-        font-size: 14px;
-        padding-bottom: 10px;
+        font-size: 20px;
+        padding-bottom: 0px;
     }
     p{
         font-size: 13px;
