--- a/src/app/components/projects/social-review/social-review.component.scss
+++ b/src/app/components/projects/social-review/social-review.component.scss
@@ -218,16 +218,18 @@
         padding-bottom: 30px;
         h1{
             font-size: 40px;
-            padding-bottom: 20px;
+            padding-bottom: 0px;
         }
         h3{
             font-size: 20px;
-            padding-bottom: 10px;
+            margin-bottom: 10px;
+            margin-top: 20px;
+            padding-bottom: 0px;
         }
         p{
             font-size: 13px;
-            padding-bottom: 10px;
-            line-height: 25px;
+            padding-bottom: 0px;
+            line-height: 20px;
         }
     }
 }
@@ -258,6 +260,7 @@
         h3{
             font-size: 20px;
             padding-top: 20px;
+            padding-bottom: 10px;
         }
         p{
             font-size: 13px;
