content & image changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,27 +26,27 @@
                         <div class="container">
                           <div class="dropdown-menu-full">
                             <a routerLink="/services/user-experience" title="UX Consulting">
-                              <img src="/assets/images/menu/ux-consulting.png" />
+                              <img src="/assets/images/menu/one.png" />
                               <span>User Experience</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/interface-design" title="Interface Design">
-                              <img src="/assets/images/menu/interface-design.png" />
+                              <img src="/assets/images/menu/two.png" />
                               <span>Interface Design</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/ui-dev" title="UI Development">
-                              <img src="/assets/images/menu/front-end-development.png" />
+                              <img src="/assets/images/menu/three.png" />
                               <span>UI Development</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/end-to-end" title="End-to-End Development">
-                              <img src="/assets/images/menu/back-end-development.png" />
+                              <img src="/assets/images/menu/four.png" />
                               <span>End-to-End Development</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/usability-testing" title="Usability Testing">
-                              <img src="/assets/images/menu/usability-testing.png" />
+                              <img src="/assets/images/menu/five.png" />
                               <span>Usability Testing</span>
                             </a>
                           </div>
