--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,8 +27,8 @@
     </li>
   </ul>
   <div class="carousel-navigation">
-    <div class="container"style="position: relative;">
-      <ul  >
+    <div class="container" style="position: relative;">
+      <ul>
         <li *ngFor="let item of services; index as i">
           <a (click)="homeCarousel.moveTo(i)" [class.active]="i == homeCarousel.activePoint">
             <img [src]="item.icon" [alt]="item.name"/>
@@ -52,8 +52,8 @@
           <div class="col-md-4">
               <div class="service" routerLink="/services/user-experience">
                 <div class="service-icon">
-                    <img src="/assets/images/services/Group 2790.png" alt="UX Consulting"/>
-                    <img src="/assets/images/services/Group 3368.png" alt="UX Consulting"/>
+                    <img src="/assets/images/services/one.png" alt="UX Consulting"/>
+                    <!-- <img src="/assets/images/services/one.png" alt="UX Consulting"/> -->
                 </div>
                 <h4>User Experience</h4>
                 <p>We believe research brings insights, our consultants connect with your business and end-users to build a better solutions to drive the business.</p>
@@ -63,8 +63,8 @@
           <div class="col-md-4">
             <div class="service" routerLink="/services/interface-design">
                 <div class="service-icon">
-                  <img src="/assets/images/services/Group 2745.png" alt="UI Design"/>
-                  <img src="/assets/images/services/Group 3370.png" alt="UI Design"/>
+                  <img src="/assets/images/services/two.png" alt="UI Design"/>
+                  <!-- <img src="/assets/images/services/two.png" alt="UI Design"/> -->
                 </div>
                 <h4>Interface Design</h4>
                 <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
@@ -74,8 +74,8 @@
         <div class="col-md-4">
           <div class="service" routerLink="/services/ui-dev">
             <div class="service-icon">
-              <img src="/assets/images/services/Group 2746.png" alt="UI Development" />
-              <img src="/assets/images/services/Group 3371.png" alt="UI Development" /> 
+              <img src="/assets/images/services/three.png" alt="UI Development" />
+              <!-- <img src="/assets/images/services/three.png" alt="UI Development" />  -->
             </div>
             <h4>UI Development</h4>
             <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -88,8 +88,8 @@
            <div class="col-md-4">
                 <div class="service" routerLink="/services/end-to-end">
                   <div class="service-icon">
-                    <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
-                    <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
+                    <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
+                    <!-- <img src="/assets/images/services/four.png" alt="End-to-End Development"/> -->
                   </div>
                   <h4>End-to-End Development</h4>
                   <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL.</p>
@@ -99,8 +99,8 @@
           <div class="col-md-4">
             <div class="service"  routerLink="/services/usability-testing">
               <div class="service-icon">
-                <img src="/assets/images/services/Group 2760.png" alt="Usablity Testing"/>
-                <img src="/assets/images/services/Group 3373.png" alt="Usablity Testing"/>
+                <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
+                <!-- <img src="/assets/images/services/five.png" alt="Usablity Testing"/> -->
               </div>
               <h4>Usablity Testing</h4>
               <p>By means of Usability Testing techniques we evaluate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience.</p>
@@ -111,8 +111,8 @@
             <a href="https://uxmint.in/" target="_blank">
               <div class="service">
                 <div class="service-icon">
-                  <img src="/assets/images/services/Group 2770.png" alt="Training"/>
-                  <img src="/assets/images/services/Group 3369.png" alt="Training"/>
+                  <img src="/assets/images/services/six.png" alt="Training"/>
+                  <!-- <img src="/assets/images/services/six.png" alt="Training"/> -->
                 </div>
                 <h4>UX Training</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
