--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -174,8 +174,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
-                          <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
-                          <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
+                          <img src="/assets/images/services/one.png" alt="UX consulting"/>
                       </div>
                       <h4>User Experience</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -185,8 +184,7 @@
                   <div class="col-md-4">
                     <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/Group 2745.png" alt="Interface Design"/>
-                        <img src="/assets/images/services/Group 3370.png" alt="Interface Design"/>
+                        <img src="/assets/images/services/two.png" alt="Interface Design"/>
                       </div>
                       <h4>Interface Design</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -196,8 +194,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
-                          <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
+                          <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                         </div>
                         <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
