--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -110,8 +110,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
-                      <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
-                      <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
+                      <img src="/assets/images/services/one.png" alt="UX consulting"/>
                   </div>
                   <h4>User Experience</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -121,8 +120,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/interface-design">
                   <div class="service-icon">
-                    <img src="/assets/images/services/Group 2745.png" alt="Interface Design"/>
-                    <img src="/assets/images/services/Group 3370.png" alt="Interface Design"/>
+                    <img src="/assets/images/services/two.png" alt="Interface Design"/>
                   </div>
                   <h4>Interface Design</h4>
                   <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -132,8 +130,7 @@
             <div class="col-md-4">
               <div class="service" routerLink="/services/ui-dev">
                   <div class="service-icon">
-                    <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
-                    <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
+                    <img src="/assets/images/services/three.png" alt="Front End Dev" />
                   </div>
                   <h4>UI Development</h4>
                   <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
