--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -186,8 +186,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/ui-dev">
                         <div class="service-icon">
-                          <img src="/assets/images/services/Group 2746.png" alt="UI Development" />
-                          <img src="/assets/images/services/Group 3371.png" alt="UI Development" /> 
+                          <img src="/assets/images/services/one.png" alt="UI Development" /> 
                         </div>
                         <h4>UI Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -198,8 +197,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
-                          <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
+                          <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                         </div>
                         <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
@@ -209,8 +207,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/Group 2745.png" alt="Interface Design"/>
-                        <img src="/assets/images/services/Group 3370.png" alt="Interface Design"/>
+                        <img src="/assets/images/services/two.png" alt="Interface Design"/>
                       </div>
                       <h4>Interface Design</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
