--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -145,8 +145,7 @@
             <div class="col-md-4">
               <div class="service" routerLink="/services/usability-testing">
                   <div class="service-icon">
-                    <img src="/assets/images/services/Group 2760.png" alt="Usablity Testing"/>
-                    <img src="/assets/images/services/Group 3373.png" alt="Usablity Testing"/>
+                    <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
                   </div>
                   <h4>Usablity Testing</h4>
                   <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
@@ -156,8 +155,7 @@
           <div class="col-md-4">
             <div class="service" routerLink="/services/interface-design">
               <div class="service-icon">
-                <img src="/assets/images/services/Group 2745.png" alt="UI Design"/>
-                <img src="/assets/images/services/Group 3370.png" alt="UI Design"/>
+                <img src="/assets/images/services/two.png" alt="UI Design"/>
               </div>
               <h4>Interface Design</h4>
               <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
@@ -167,8 +165,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
-                      <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
-                      <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
+                      <img src="/assets/images/services/one.png" alt="UX consulting"/>
                   </div>
                   <h4>User Experience</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
