--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -426,8 +426,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
-                          <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
-                          <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
+                          <img src="/assets/images/services/one.png" alt="UX consulting"/>
                       </div>
                       <h4>User Experience</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -438,8 +437,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/ui-dev">
                         <div class="service-icon">
-                          <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
-                          <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
+                          <img src="/assets/images/services/three.png" alt="Front End Dev" /> 
                         </div>
                         <h4>UI Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -451,8 +449,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
-                          <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
+                          <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                         </div>
                         <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
